--- a/Sol-berg.html
+++ b/Sol-berg.html
@@ -38,7 +38,7 @@
             <div class="content">
                 <img id="portrett" src="http://sol-berg.no/bilder_av_eivind/03a.jpg">
                 <div class="boks">
-                    <h2>Hi, my name is </h2><h1>Eivind Solberg</h1>
+                    <h2>Heisann, mitt navn er </h2><h1>Eivind Solberg</h1>
                     <h2>I love to work with: <br>SVG, CSS, HTML and FILM </h2>
                 </div>
             </div>
