updated css link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <link rel="stylesheet" href="./css/normalize.min.css">
         <link href="http://fonts.googleapis.com/css?family=Raleway:100|Open+Sans:400,300" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="./css/css/main.css">
+        <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="./css/flexkort.css">
         <script src="http://sol-berg.no/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Hammersmith+One|Poppins" rel="stylesheet">
