--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <meta name="theme-color" content="#ffffff">
 
         
-        
-        <!-- Hotjar Tracking Code for https://eivindsolberg.github.io/probable-winner/ -->
+
+<!-- Hotjar Tracking Code for https://jolly-curran-7b77c2.netlify.app -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:2274924,hjsv:6};
+        h._hjSettings={hjid:2293588,hjsv:6};
         a=o.getElementsByTagName('head')[0];
         r=o.createElement('script');r.async=1;
         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
